# fail2drive

./: .gitignore  README.md  pyproject.toml
fail2drive/: __init__.py  atomics.py
fail2drive/scenarios/: __init__.py
fail2drive_split/: __init__.py
toolbox/: customobstacle_designer.py
toolbox/scripts/: config.py  scenario_attribute_dialog.py  window.py
tools/: f2d_result_parser.py
